--- a/locales/de.json
+++ b/locales/de.json
@@ -148,7 +148,8 @@
     "table": "Tischspiele",
     "card": "Kartenspiele",
     "recent": "Letzte Spiele",
-    "new": "Neue Spiele"
+    "new": "Neue Spiele",
+    "buybonus": "Bonus Buy"
   },
   "footer": {
     "text": {
