--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -147,7 +147,8 @@
     "roulette": "Roulette",
     "table": "Jeux de table",
     "card": "Jeux de cartes",
-    "new": "Nouveaux jeux"
+    "new": "Nouveaux jeux",
+    "buybonus": "Bonus Buy"
   },
   "footer": {
     "text": {
