--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -148,7 +148,8 @@
     "table": "Table Games",
     "card": "Card games",
     "recent": "Last games",
-    "new": "New games"
+    "new": "New games",
+    "buybonus": "Bonus Buy"
   },
   "footer": {
     "text": {
