NINE-608 corrected translations

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -185,7 +185,8 @@
     "name": "Název",
     "points":  "Směřovat",
     "prize": "cena",
-    "prizePool": "Prize pool"
+    "prizePool": "Prize pool",
+    "freeSpins": "spinů zdarma"
   },
   "actions" : {
     "addCurrency" : "Add currency"
