--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -190,7 +190,8 @@
     "name": "Name",
     "points":  "Points",
     "prize": "Prize",
-    "prizePool": "Prize pool"
+    "prizePool": "Prize pool",
+    "freeSpins": "Free Spins"
   },
   "actions": {
     "addCurrency": "Add currency"
