--- a/locales/en.json
+++ b/locales/en.json
@@ -1365,5 +1365,33 @@
         "text": "All free spins are issued with a wager x10. All cash prizes are issued with wagering x1."
       }
     ]
+  },
+  "sunshine_spins_lottery": {
+    "title": "Sunshine Spins<br/> lottery",
+    "prize": "4,000 Free Spins",
+    "text": "Happy summer people decked out in happy summer clothes, marching toward this month’s fun-stuffed festival: The Sunshine Spins lottery!<br/><br/>With the Sunshine Spins lottery, take yourself back to the time of Woodstock, Isle of Wight Festival, and San Francisco. To join in just run around barefoot and rock out to your favourite slots. Enjoy the vibe of the 4000 Free Spin prize pool with 50 lucky winners!<br/>So put your best summer clothes on and remember, “it’s all about the spins man!”",
+    "terms": [
+      {
+        "text": "The lottery will last 7 days starting at 00.01 (UTC) on Tuesday and ending at 23.59 (UTC) on Monday."
+      },
+      {
+        "text": "The minimum deposit required for a lottery ticket is 20 EUR, 30 CAD/AUD, 500 CZK, 350 ZAR, 40 BNG, 150 DKK/HRK, 100 RON."
+      },
+      {
+        "text": "The number of lottery tickets per player is unlimited."
+      },
+      {
+        "text": "Every ticket can be a winning ticket."
+      },
+      {
+        "text": "At the time of the draw, the game account must not be blocked."
+      },
+      {
+        "text": "Prizes of 4000 Free Spins will be awarded automatically at the end of the lottery every week on Monday."
+      },
+      {
+        "text": "For Free Spins, wagering is x5."
+      }
+    ]
   }
 }
