NINE-630 added sunshine spin promo

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1360,6 +1360,7 @@
   },
   "sunshine_spins_lottery": {
     "title": "Loterie<br/> Sunshine Spins",
+    "name": "Loterie Sunshine Spins",
     "prize": " 4 000 spinů zdarma",
     "text": "Šťastní letní lidé vyparádění ve veselém letním oblečení společně kráčejí vstříc festivalu nabitému zábavou, který se koná tenhle měsíc: Loterii Sunshine Spins!<br/><br/>S loterií Sunshine Spins si můžete připomenout časy Woodstocku, festivalu na ostrově Wight a atmosféru San Francisca. Pokud se chcete přidat, shoďte boty a bosky to rozjeďte u svých nejoblíbenějších slotů. Užívejte si pohodu se 4 000 spiny zdarma a cenami pro 50 šťastných výherců!",
     "terms": [
