--- a/locales/de.json
+++ b/locales/de.json
@@ -1366,6 +1366,7 @@
   },
   "sunshine_spins_lottery": {
     "title": "Sunshine<br/> Spins-Verlosung",
+    "name": "Sunshine Spins-Verlosung",
     "prize": "4 000 Freispiele",
     "text": "Fröhliche Sommerfrischler in fröhlichen Sommerklamotten auf dem Weg zum Spaßfestival dieses Monats: Der Sunshine Spins-Verlosung!<br/><br/>Lassen Sie sich bei der Sunshine Spins-Verlosung zurückversetzen in die Zeit der Festivals von Woodstock und der Isle of Wight und nach San Francisco. Um mitzumachen, Schuhe ausziehen und abrocken zu Ihren Lieblingsautomatenspielen. Gehören Sie zu den 50 Glücklichen, die sich den Gesamtgewinn von 4 000 Freispielen teilen!",
     "terms": [
