--- a/locales/en.json
+++ b/locales/en.json
@@ -1368,6 +1368,7 @@
   },
   "sunshine_spins_lottery": {
     "title": "Sunshine Spins<br/> lottery",
+    "name": "Sunshine Spins lottery",
     "prize": "4,000 Free Spins",
     "text": "Happy summer people decked out in happy summer clothes, marching toward this month’s fun-stuffed festival: The Sunshine Spins lottery!<br/><br/>With the Sunshine Spins lottery, take yourself back to the time of Woodstock, Isle of Wight Festival, and San Francisco. To join in just run around barefoot and rock out to your favourite slots. Enjoy the vibe of the 4000 Free Spin prize pool with 50 lucky winners!<br/>So put your best summer clothes on and remember, “it’s all about the spins man!”",
     "terms": [
