--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -1365,6 +1365,7 @@
   },
   "sunshine_spins_lottery": {
     "title": "La loterie<br/> Sunshine Spins",
+    "name": "La loterie Sunshine Spins",
     "prize": "4 000 tours gratuits",
     "text": "Des amateurs d’été heureux, équipés de vêtements décontractés d’été, marchant vers le festival de ce mois-ci : la loterie Sunshine Spins!<br/><br/>Grâce à la loterie Sunshine Spins, revivez l’époque de Woodstock, du festival de l’île de Wight et de San Francisco. Pour participer, il suffit de courir pieds nus, d’écouter vos chansons préférées et de faire tourner vos machines à sous préférées. Profitez de l’ambiance de la cagnotte de 4 000 tours gratuits avec 50 heureux gagnants!",
     "terms": [
