--- a/locales/cs.json
+++ b/locales/cs.json
@@ -186,7 +186,8 @@
     "points":  "Směřovat",
     "prize": "cena",
     "prizePool": "Prize pool",
-    "freeSpins": "spinů zdarma"
+    "freeSpins": "spinů zdarma",
+    "winners": "Vítězové"
   },
   "actions" : {
     "addCurrency" : "Add currency"
@@ -1320,16 +1321,6 @@
     "title": "Weekend<br/> Playing Lottery ",
     "prize": "<span class=\"Colored\">€ 2,500</span> + <span class=\"Colored\">500 Free Spins</span>",
     "text": "Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.",
-    "advantages": {
-      "text1-highlighted": "240",
-      "text1": "winners",
-      "text2-highlighted": "1 week",
-      "text2": "duration",
-      "text3-highlighted": "2,500 eur",
-      "text3": "prize pool",
-      "text4-highlighted": "0,5 eur",
-      "text4": "1 ticket"
-    },
     "termsTitle": "Podmínky účasti v loterii",
     "terms": [
       {
@@ -1356,7 +1347,10 @@
       {
         "text": "All free spins are issued with a wager x10. All cash prizes are issued with wagering x1."
       }
-    ]
+    ],
+    "lastRoundWinners": "Vítězové posledního kola",
+    "ticket": "Los",
+    "tickets": "Losy"
   },
   "sunshine_spins_lottery": {
     "title": "Loterie<br/> Sunshine Spins",
