--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -450,6 +450,12 @@
       "upTo": "une cagnotte de 2500 €",
       "name": "À vos marques pour le Weekly Derby",
       "text": "C’est l’heure du Weekly Derby et nos prix vous feront trépigner d’impatience pour arriver en premier!<br/><br/>En cours pendant 7 jours chaque semaine du jeudi 00 h 01 UTC au mercredi 23 h 59 UTC. Saisissez votre chance de partager une cagnotte de 2 500 € avec 40 coureurs chanceux.<br/><br/>Vous n’avez qu’à faire une mise de 0,5 € et être prêt(e) pour la course.<br/><br/>Bonne chance et que le Derby commence!"
+    },
+    "twitterGiveaway": {
+      "title": "twitter<br/> Giveaway",
+      "upTo": "Gagnez 600 tours gratuits",
+      "name": "Gagnez 600 tours gratuits sur Twitter.",
+      "text": "Nous avons préparé un concours pour vous sur notre compte Twitter officiel.<br/><br/>Suivez-nous, aimez ce tweet et attendez les résultats, le 19 août. Nous choisirons au hasard 3 gagnants qui recevront chacun 200 tours gratuits à la machine à sous Wolf Gold.<br/><br/>Bonne chance!"
     }
   },
   "tournaments": {
