--- a/locales/cs.json
+++ b/locales/cs.json
@@ -445,6 +445,12 @@
       "upTo": "prize pool 2500 eur",
       "name": "Vyrazte na Weekly Derby",
       "text": "Je čas na Weekly Derby a naše ceny vás donutí trochu trošku supět, abyste první dorazili na místo!<br/><br/>Turnaj probíhá 7 dnů od čtvrtka 00:01 UTC do středy 23:59 UTC. Chopte se své příležitosti rozdělit si cenný prize pool ve výši 2500 eur společně se 40 dalšími jezdci.<br/><br/>Stačí minimální sázka 0,5 eur a být připravený na soutěž.<br/><br/>Hodně štěstí a pojďme odstartovat Derby! "
+    },
+    "twitterGiveaway": {
+      "title": "twitter<br/> Giveaway",
+      "upTo": "Dar v podobě 600 spinů zdarma",
+      "name": "Dar v podobě 600 spinů zdarma na Twitteru.",
+      "text": "Připravili jsme pro vád dar na oficiálním Twitterovém účtu.<br/><br/>Sledujte nás, dejte lajk tomuto tweetu a čekejte na výsledky 19. srpna. Náhodně vybereme 3 vítěze a každému z nich dáme 200 spinů zdarma v slotu Wolf Gold.<br/><br/>Hodně štěstí!"
     }
   },
   "tournaments" : {
