--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -452,6 +452,12 @@
       "upTo": "prize pool €2,500",
       "name": "Saddle up for the Weekly Derby",
       "text": "It’s Weekly Derby time, and our prizes will have you chomping at the bit to be first past the post!<br/><br/>Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.<br/><br/>Just make a minimum bet of €0.5 and be ready for the race. <br/><br/>Good luck and let’s begin the Derby!"
+    },
+    "twitterGiveaway": {
+      "title": "twitter<br/> Giveaway",
+      "upTo": "600 Free Spins",
+      "name": "600 Free Spins Giveaway on Twitter.",
+      "text": "We’ve prepared a giveaway for you on our official Twitter account.<br/><br/> Follow us, like this tweet, and wait for the results on August 16th. We will randomly choose 3 winners and each of them will receive 250 Free Spins in the Wolf Gold slot.<br/><br/>Good Luck!"
     }
   },
   "tournaments": {
